fix z-index

--- a/src/app/section-about-me/section-about-me.component.scss
+++ b/src/app/section-about-me/section-about-me.component.scss
@@ -27,6 +27,7 @@ main{
     display: flex;
     flex-direction: column;
     gap: var(--gap-mobile);
+    position: relative;
     z-index: 5;
   }
   
